# mc-plugin-finder

./: .dockerignore  .env  .gitignore  Cargo.toml  LICENSE  README.md  schema.sql
collector/: Cargo.toml
collector/src/: main.rs  modrinth.rs  util.rs
collector/src/hangar/: project.rs  version.rs
collector/src/modrinth/: project.rs
collector/src/spigot/: resource.rs
ingest/: Cargo.toml
ingest/src/: hangar.rs  main.rs  modrinth.rs  spigot.rs
ingest/src/hangar/: project.rs  version.rs
ingest/src/modrinth/: project.rs  version.rs
ingest/src/spigot/: author.rs  resource.rs  version.rs
ingest/src/spigot/resource/: name.rs
migrations/: V1__initial.sql  V2__add_btree_indexes.sql  V3__recreate_btree_indexes.sql  V4__add_ingest_log_table_and_types.sql  V5__source_repository_case_insensitive_match.sql  V6__add_success_to_ingest_log.sql  V7__add_source_repository_id_to_projects.sql
queries/: common_project.sql  final_project.sql  fix_upstream_errors.sql  hangar_project.sql  ingest_log.sql  modrinth_project.sql  search_result.sql  spigot_author.sql  spigot_resource.sql
src/: collector.rs  config.rs  cornucopia.rs  database.rs  main.rs
src/collector/: hangar.rs  modrinth.rs  spigot.rs  util.rs
src/collector/hangar/: project.rs  version.rs
src/collector/modrinth/: project.rs  version.rs
src/collector/spigot/: author.rs  resource.rs  version.rs
src/database/: common.rs  cornucopia.rs  fix_upstream_errors.rs  ingest_log.rs  source_repository.rs  spigot.rs
src/database/common/: project.rs  search_result.rs
src/database/final/: project.rs
src/database/hangar/: project.rs
src/database/modrinth/: project.rs
src/database/spigot/: author.rs  resource.rs
web/: Cargo.toml
web/src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs  util.rs
web/style/: main.scss
