[workspace]
members = [
  "ingest",
  "web"
]

[package]
name = "mc-plugin-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cornucopia_async = "0.6.0"
deadpool-postgres = "0.12.1"
futures = "0.3.30"
postgres-types = "0.2.6"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
time = { version = "0.3.36", features = ["macros", "parsing"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.10", features = ["with-time-0_3"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"

[dev-dependencies]
function_name = "0.3.0"
rstest = "0.18.2"
speculoos = "0.11.0"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"