[workspace]
members = [
  "ingest",
  "web"
]

[workspace.dependencies]
anyhow = "1.0.95"
deadpool-postgres = "0.12.1"
dotenvy = "0.15.7"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
time = { version = "0.3.37", features = ["macros", "parsing"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

[package]
name = "mc-plugin-finder"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
config = "0.15.4"
cornucopia_async = "0.6.0"
deadpool-postgres = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
postgres-types = "0.2.8"
serde = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { version = "0.7.12", features = ["with-time-0_3"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
function_name = "0.3.0"
rstest = "0.24.0"
speculoos = "0.11.0"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
