[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
constcat = "0.5.1"
deadpool-postgres = "0.12.1"
dotenvy = "0.15.7"
emojis = "0.6.4"
futures = "0.3.31"
governor = "0.8.0"
mc-plugin-finder = { path = ".." }
nonzero_ext = "0.3.0"
numeric-sort = "0.1.4"
page-turner = "1.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
time = { version = "0.3.37", features = ["macros", "parsing"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
url = "2.5.4"

[dev-dependencies]
rstest = "0.24.0"
speculoos = "0.11.0"
wiremock = "0.6.2"
