[package]
name = "ingest"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }
constcat = "0.5.1"
deadpool-postgres = { workspace = true }
dotenvy = { workspace = true }
emojis = "0.6.4"
futures = { workspace = true }
governor = "0.8.0"
mc-plugin-finder = { path = ".." }
nonzero_ext = "0.3.0"
numeric-sort = "0.1.4"
page-turner = "1.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-segmentation = "1.12.0"
url = { workspace = true }

[dev-dependencies]
rstest = "0.24.0"
speculoos = "0.11.0"
wiremock = "0.6.2"
